<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".framework.MainActivity">

        <TextView
            android:id="@+id/textview_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_margin="8dp"
            android:textColor="@color/primaryColor"
            android:textAlignment="center"
            android:text="@string/hello_first_fragment"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            />

        <TextView
            android:id="@+id/textview_example_adn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/label_example_adn"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textview_first"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/materialTextInputLayout_adn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:inputType="textCapCharacters"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_example_adn"
            android:hint="@string/example_adn">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/materialTextInputEditText_adn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@id/materialTextInputLayout_adn"
            app:layout_constraintStart_toStartOf="parent"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonShowList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_list"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@id/materialTextInputLayout_adn"
            app:layout_constraintStart_toStartOf="@+id/button_first"
            app:layout_constraintEnd_toEndOf="parent"/>


        <ImageView
            android:id="@+id/imageView_mutant"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:visibility="gone"
            android:src="@drawable/deadpool2"
            app:layout_constraintTop_toBottomOf="@+id/button_first"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />
        <ImageView
            android:id="@+id/imageView_human"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="gone"
            android:scaleType="centerCrop"
            android:src="@drawable/human"
            app:layout_constraintTop_toBottomOf="@+id/button_first"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />
        <ImageView
            android:id="@+id/imageView_error"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="gone"
            android:scaleType="centerInside"
            android:src="@drawable/error"
            app:layout_constraintTop_toBottomOf="@+id/button_first"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />

</androidx.constraintlayout.widget.ConstraintLayout>